--- a/estudo-chatgpt/exercicios-práticos-front-end/ex02/style.css
+++ b/estudo-chatgpt/exercicios-práticos-front-end/ex02/style.css
@@ -104,7 +104,7 @@ label {
   align-items: center;
   width: 100%;
 }
-.checkbox,
+#checkbox,
 .validCheckbox {
   width: 12px;
   height: 12px;
@@ -167,4 +167,12 @@ button:hover {
 }
 .teste {
   border: 2px solid #ec2620;
+}
+.login-success {
+  display: none;
+}
+.login-success p {
+  font-size: 1.2rem;
+  font-weight: 800;
+  color: rgb(18, 39, 228);
 }
